# proc-macro-workshop

./: main.rs
builder/: Cargo.toml
builder/src/: lib.rs
